# sobjectizer-fetchcontent-demo

./: CMakeLists.txt  LICENSE  README.md
hello_world/: .CMakeLists.txt.swp  CMakeLists.txt
